apps/shop/storefront-synthetics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-synthetics
  labels: {app: storefront-synthetics, app.kubernetes.io/part-of: cartly, app.kubernetes.io/version: v2.4.5}
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels: {app: storefront-synthetics}
  template:
    metadata:
      labels: {app: storefront-synthetics, app.kubernetes.io/part-of: cartly, app.kubernetes.io/version: v2.4.5}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: storefront-synthetics
          image: drdroidtest.azurecr.io/cartly/shop-service:v2.4.5
          ports: [{name: http, containerPort: 8080}]
          envFrom: [{configMapRef: {name: shop-config}}]
          resources:
            requests: {cpu: 20m, memory: 80Mi}
            limits: {cpu: 300m, memory: 256Mi}
