apps/shop/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels: {app: payments, app.kubernetes.io/part-of: cartly, app.kubernetes.io/version: v2.4.5}
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels: {app: payments}
  template:
    metadata:
      labels: {app: payments, app.kubernetes.io/part-of: cartly, app.kubernetes.io/version: v2.4.5}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: payments
          image: drdroidtest.azurecr.io/cartly/shop-service:v2.4.5
          ports: [{name: http, containerPort: 8080}]
          envFrom: [{configMapRef: {name: shop-config}}]
          resources:
            requests: {cpu: 30m, memory: 80Mi}
            limits: {cpu: 300m, memory: 192Mi}
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet: {path: /readyz, port: http}
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  labels: {app: payments}
spec:
  selector: {app: payments}
  ports: [{name: http, port: 8080, targetPort: http}]
