apps/shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront
spec:
  ingressClassName: nginx
  rules:
    - host: shop.4.148.120.201.nip.io
      http:
        paths:
          - path: /api/promotions
            pathType: Prefix
            backend: {service: {name: promotions, port: {number: 8080}}}
          - path: /
            pathType: Prefix
            backend: {service: {name: frontend, port: {number: 8080}}}
